--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "animate.css": "^4.1.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
+    "swiper": "^10.1.0",
     "typescript": "5.1.6"
   }
 }
