--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "react": "18.2.0",
+    "react-data-query": "^2.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "swiper": "^10.1.0",
