--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-data-query": "^2.2.1",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.4",
     "swiper": "^10.1.0",
     "typescript": "5.1.6"
   }
