--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "notistack": "^3.0.1",
     "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-data-query": "^2.2.1",
