--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-data-query": "^2.2.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.15.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.4",
     "swiper": "^10.1.0",
