--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "notistack": "^3.0.1",
     "plaiceholder": "^3.0.0",
     "react": "18.2.0",
